[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Store.gd" type="Script" id=1]
[ext_resource path="res://sprites/Wood.png" type="Texture" id=2]
[ext_resource path="res://sprites/Exit.png" type="Texture" id=3]
[ext_resource path="res://sprites/greenbtn.png" type="Texture" id=4]
[ext_resource path="res://sprites/blueBtn.png" type="Texture" id=5]
[ext_resource path="res://scenes/buySpell.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/shopBtn.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.353553 ),
"update": 0,
"values": [ Vector2( 0, -250 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.176777, 0.183011 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -250 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "knivesPressed"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("knives:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.09, 0.09 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spellsPressed"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("spells:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.09, 0.09 ), Vector2( 0.1, 0.1 ) ]
}

[node name="Store" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/come = SubResource( 1 )
anims/goAway = SubResource( 2 )
anims/knivesPressed = SubResource( 3 )
anims/spellsPressed = SubResource( 4 )

[node name="wood" type="Sprite" parent="."]
position = Vector2( 72.2816, 131.27 )
scale = Vector2( 0.237559, 0.309125 )
z_index = -2
texture = ExtResource( 2 )

[node name="exit" type="Button" parent="."]
margin_left = 117.717
margin_top = 62.7663
margin_right = 574.717
margin_bottom = 533.767
rect_scale = Vector2( 0.05, 0.05 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="spells" type="Button" parent="."]
margin_left = 73.6321
margin_top = 180.463
margin_right = 637.632
margin_bottom = 357.463
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1, 1 )
focus_mode = 0
enabled_focus_mode = 0
text = "spells"
icon = ExtResource( 4 )
flat = true

[node name="knives" type="Button" parent="."]
margin_left = 18.7321
margin_top = 181.0
margin_right = 542.732
margin_bottom = 358.0
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="buySpell" parent="." instance=ExtResource( 6 )]

[node name="shop icon" type="Sprite" parent="."]
position = Vector2( 72.9156, 69.5917 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="spells" to="." method="_on_spells_pressed"]
[connection signal="pressed" from="knives" to="." method="_on_knives_pressed"]
